[package]
name = "navsharp"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "ir/crates/back",
    "ir/crates/compiler",
    "ir/crates/front",
    "ir/crates/middle",
    "lang"
,
    "crates/fxindexmap"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3